# rules_rs

./: MODULE.bazel  README.md
rs/: extensions.bzl
rs/experimental/: BUILD.bazel  rules_rust.bzl  rules_rust_prost.bzl
rs/private/: downloader.bzl
rs/private/prost/: BUILD.bazel  Cargo.toml
test/: BUILD.bazel  MODULE.bazel
test/prost/: BUILD.bazel  echo.proto  prost_smoke_test.rs
test/prost/proto_toolchain/: BUILD.bazel
test/vendored_workspace_dep/: Cargo.toml
test/vendored_workspace_dep/app/: Cargo.toml
test/vendored_workspace_dep/app/src/: main.rs
test/vendored_workspace_dep/mylib/: BUILD.bazel
test/vendored_workspace_dep/mylib/src/: lib.rs
