load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_rs//rs:rust_test.bzl", "rust_test")
load("@rules_rust_prost//:defs.bzl", "rust_prost_library")

proto_library(
    name = "echo_proto",
    srcs = ["echo.proto"],
)

rust_prost_library(
    name = "echo_rust_proto",
    proto = ":echo_proto",
    visibility = ["//visibility:public"],
)

rust_test(
    name = "prost_smoke_test",
    srcs = ["prost_smoke_test.rs"],
    deps = [":echo_rust_proto"],
)
