[package]
name = "direct-cargo-bazel-deps"
version = "0.0.1"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
h2 = "=0.4.6"
prost = "=0.13.1"
prost-types = "=0.13.1"
protoc-gen-prost = "=0.4.0"
protoc-gen-tonic = "=0.4.1"
tokio = { version = "=1.39.3", features = ["full"] }
tokio-stream = "=0.1.15"
tonic = "=0.12.1"
